fix quick add textbox on safari

--- a/app/ui/AddAction.styl
+++ b/app/ui/AddAction.styl
@@ -24,6 +24,7 @@
 		padding: 6px
 		width: 250px
 		height: 30px
+		line-height: 1
 	
 	.addActionInput::-webkit-input-placeholder
 		color: rgb(225, 225, 225)
